p2ws_package/Devpp2ws-Package/objects/MD_Appraisal_Item__c.object
<CustomObject>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Description__c</fullName>
        <formula>MD_Appraisal_Subject__r.MD_Appraisal_Form__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form_Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Number__c</fullName>
        <formula>MD_Appraisal_Subject__r.MD_Appraisal_Form__r.Name</formula>
        <label>Form Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>MD_Appraisal_Subject__r.Is_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD_Appraisal_Item_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>MD Appraisal Item External ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MD_Appraisal_Subject__c</fullName>
        <label>MD Appraisal Subject</label>
        <referenceTo>MD_Appraisal_Subject__c</referenceTo>
        <relationshipLabel>MD Appraisal Items</relationshipLabel>
        <relationshipName>MD_Appraisal_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>FreeText</fullName>
                </value>
                <value>
                    <fullName>Rating</fullName>
                </value>
                <value>
                    <fullName>YesNo</fullName>
                </value>
                <value>
                    <fullName>YesNoNA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <formula>MD_Appraisal_Subject__r.MD_Appraisal_Form__r.Version__c</formula>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <label>MD Appraisal Item</label>
    <nameField>
        <label>MD Appraisal Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD Appraisal Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>